# artwork-indexer

./: .flake8  .gitignore  Dockerfile  README.md  config.default.ini  config.tests.example.ini  create_test_db.sh  generate_code.py  handlers.py  handlers_base.py  indexer.py  pg_conn_wrapper.py  projects.py  pyproject.toml  requirements.txt  run_tests.sh  tests.py
.github/workflows/: tests.yml
docker/: artwork-indexer  config.ini.ctmpl  consul-template.conf  indexer.service
sql/: caa_functions.sql  caa_triggers.sql  create.sql  create_schema.sql  drop.sql  eaa_functions.sql  eaa_triggers.sql
tests/: __init__.py  caa_setup.sql  caa_teardown.sql  eaa_setup.sql  eaa_teardown.sql  test_caa.py  test_concurrency.sh  test_eaa.py  test_general.py  test_signals.sh
