[tool.poetry]
name = "artwork-indexer"
version = "2024.11.30"
description = "A daemon that updates index.json and other metadata files at the CAA and EAA"
license = "GPL-2.0-or-later"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
sentry-sdk = "1.39.2"
psycopg = {version = "3.1.18", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
coverage = "7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
