[tool.poetry]
name = "artwork-indexer"
version = "2025.06.16"
description = "A daemon that updates index.json and other metadata files at the CAA and EAA"
license = "GPL-2.0-or-later"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "2.32.4"
sentry-sdk = "2.30.0"
psycopg = {version = "3.2.9", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
flake8 = "7.2.0"
coverage = "7.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
